apps/projects/dsl-scouting-dashboard-project/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dsl-scouting-dashboard
  namespace: dsl-scouting-dashboard
  annotations:
    link.argocd.argoproj.io/external-link: https://dslstats.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-dslstats
  hostnames:
    - dslstats.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: scouting-dashboard
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
